--- a/tea_cozy/index.html
+++ b/tea_cozy/index.html
@@ -1,4 +1,6 @@
 <head>
+  <! Tea Cosy Project, Richard Kiddle, 280519 ->
+   <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   <title>The Tea Cozy</title>
 </head>
 <body>
