--- a/tea_cozy/index.html
+++ b/tea_cozy/index.html
@@ -1,12 +1,12 @@
 <head>
-  <! Tea Cosy Project, Richard Kiddle, 280519 ->
+  <!-- Tea Cozy Project, Richard Kiddle, 280519 -->
    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   <title>The Tea Cozy</title>
 </head>
 <body>
   <!-- Header -->
   <header class="flex-container">
-<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png">
+<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png" alt="Tea Cozy logo">
     <nav>
       <span><a href="#mission">Mission</a></span>
       <span><a href="#store">Featured Tea</a></span>
@@ -33,23 +33,23 @@
       <h4>What's Steeping at The Tea Cozy?</h4>
       <div class="flex-container items">
         <div class="item">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="berryblitz tea">
           <span>Fall Berry Blitz Tea</span>
         </div>
         <div class="item">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="box of spiced rum tea">
           <span>Spiced Rum Tea</span>
         </div>
         <div class="item">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="donut">
           <span>Seasonal Donuts</span>
         </div>
         <div class="item">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="Peppermint infusion">
           <span>Myrtle Ave Tea</span>
         </div>
         <div class="item">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="Cup of tea and jar of sugar">
           <span>Bedford Bizarre Tea</span>
         </div>
       </div>
